--- a/styles/style.css
+++ b/styles/style.css
@@ -114,6 +114,7 @@ dl>dd>dl {
 }
 /* large img target */
 .second-image dl:target {
+    display: block;
     position: absolute;
     border: 1px solid #ffffff;
     border-radius: 10px;
@@ -125,7 +126,6 @@ dl>dd>dl {
     height: -webkit-calc(100% - 30px);
     width: calc(100% - 60px);
     height: calc(100% - 30px);
-    display: block;
     top: 0px;
     left: 0px;
     right: 0px;
@@ -182,7 +182,7 @@ dl>dd>dl {
     color: #901808;
 }
 /* main image */
-.second-image dl:target dd:nth-of-type(1) {
+.second-image dl:target dd.first-para {
     position: relative;
     display: block;
     text-align: center;
@@ -201,7 +201,7 @@ dl>dd>dl {
 }
 
 /* loading animation */
-.spinning-wheel {
+:root .spinning-wheel {
     opacity: 0;
     position: absolute;
     top: 50%;
@@ -226,7 +226,7 @@ dl>dd>dl {
     animation: spin 2700ms linear;
 }
 /* main description*/
-.second-image dl:target dd:nth-of-type(2) {
+.second-image dl:target dd.second-para {
     display: block;
     text-align: center;
     font: 1.7em 'Kameron',sans-serif;
@@ -241,7 +241,7 @@ dl>dd>dl {
     animation: fadeInText 1500ms cubic-bezier(0.755,0.050,0.855,0.060);
 }
 /* bottom close symbol */
-.second-image dl:target dd:nth-of-type(3) {
+.second-image dl:target dd.third-para {
     display: block;
     text-align: center;
     font: 1.7em 'Kameron',sans-serif;
@@ -253,14 +253,14 @@ dl>dd>dl {
     animation: fadeInText 1500ms cubic-bezier(0.090,0.585,0.500,0.825);
 }
 
-.second-image dl:target dd:nth-of-type(3) a {
+.second-image dl:target dd.third-para a {
     background: #fff;
     color: #444;
     padding: 5px;
     border-radius: 5px;
 }
 
-.second-image dl:target dd:nth-of-type(3) a:hover {
+.second-image dl:target dd.third-para a:hover {
     background: #444;
     color: #fff;
 }
@@ -559,11 +559,12 @@ dl>dd>dl {
 html:-webkit-full-screen {
     width: 100%;
     height: 100%;
-}  
+}
+
 #wrapper > span {
-font-size : 11px;
-text-align : right;
-display : block;
+    font-size: 11px;
+    text-align: right;
+    display: block;
 }
 /* new clearfix */
 .clearfix:after {
@@ -574,6 +575,7 @@ display : block;
     clear: both;
     height: 0;
 }
+
 * html .clearfix {
     zoom: 1;
 }
